[project]
name = "cml"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "chex>=0.1.87",
    "gymnasium-robotics>=1.2.4",
    "ipykernel>=6.29.5",
    "jax[cuda12]>=0.4.35",
    "pyqt5>=5.15.11",
    "seaborn>=0.13.2",
    "stable-baselines3[extra]>=2.3.2",
]
